--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,600">
+
+  <link rel="icon" href="/img/safenetwork-apple-touch-icon.png" type="image/png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,600">
   <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
-  <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{ site.name }}" href="{{ site.baseurl }}/feed.xml" />
-  {% seo %}
+  {% seo title=false %}
 </head>
 <body>
   <div class="container">
